<package>
  <name>dual_manipulation_planner</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation Planner
  </description>
  <maintainer email="mirko.ferrati@gmail.com">Mirko Ferrati</maintainer>
  <license>Unknown</license>

  <author>Mirko Ferrati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dual_manipulation_shared</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
</package>
